feat: Implement a general call-wm-menu

--- a/README.adoc
+++ b/README.adoc
@@ -3490,6 +3490,31 @@ cat --squeeze-blank - \
 
 ----
 
+=== `call-wm-menu` - calls the main window manager menu, current window manager is detected automatically
+
+TODO: Help
+
+.file::call-wm-menu
+[source,sh]
+----
+#!/usr/bin/env tclsh
+
+package require Tclx
+
+set wmName [exec enrich-path wm - get-wm-name]
+set menuName [lindex $::argv 0]
+
+switch -exact $wmName {
+    herbstluftwm {
+        execl enrich-path [list wm/herbstluft - with-env call-menu $menuName]
+    }
+    default {
+        execl run-menu [list -e "Menu: $menuName not supported"]
+    }
+}
+
+----
+
 === `add-to-history`
 
 TODO: Add description
