fix: Properly discard GUIX environment in bash-pure

--- a/README.adoc
+++ b/README.adoc
@@ -139,10 +139,26 @@ sudo apt install python3 fonts-noto emacs25
 .file::bash-pure
 [source,sh]
 ----
-#!/usr/bin/env sh
+#!/usr/bin/env tclsh
 
-# exec env --ignore-environment - HOME="${HOME}" USER="${USER}" DISPLAY="${DISPLAY}" bash --login --noprofile --norc "$@"
-exec bash --noprofile --norc "$@"
+package require Tclx
+
+proc removeElementsWithPattern {xs pattern} {
+    set res {}
+    foreach x $xs {
+        if {![string match $pattern $x]} {
+            lappend res $x
+        }
+    }
+    return $res
+}
+
+foreach {var val} [array get env] {
+    set newVals [removeElementsWithPattern [split $val :] *guix*]
+    set ::env($var) [join $newVals :]
+}
+
+execl bash [list --login --noprofile --norc {*}$::argv]
 
 ----
 
