feat: Add command to dedup lines

--- a/README.adoc
+++ b/README.adoc
@@ -2546,7 +2546,18 @@ puts "$coreTempsText | $fanStatsText | $batStatsText"
 ----
 #!/usr/bin/env sh
 
-exec echo "${PATH}" | awk -v RS=: -v ORS=: '!($0 in a) {a[$0]; print}' | head -1
+exec echo "${PATH}" | awk -v RS=: -v ORS=: '!seen[$0]++' | head -1
+
+----
+
+=== `dedup-lines` - dedups lines
+
+.file::dedup-lines
+[source,sh]
+----
+#!/usr/bin/env sh
+
+exec awk '!seen[$0]++'
 
 ----
 
