--- a/README.adoc
+++ b/README.adoc
@@ -3415,6 +3415,10 @@ if {$text ne ""} {
             set path [join [lrange $rest 1 end] ":"]
             execl ssh [list $hostExpr cat $path]
         }
+        "/*/" {
+            set path [string trim $text]
+            execl ls [list -1 --indicator-style=slash --dereference --all --group-directories-first $path]
+        }
         "edit!*" {
             set path [exec which [stripPrefix $text {edit!}]]
             execl ffn [list $path]
