fix: Position calc @ splitString @ dispatch-action

--- a/README.adoc
+++ b/README.adoc
@@ -3182,6 +3182,15 @@ exec xset b off
 # TODO: report-missing-executables
 # TODO: Declarative configuration?
 
+# TODO: Samples
+# dispatch-action 'ssh://<foobar>!' 'w'
+# dispatch-action 'ssh://<username>@<foobar>' '!' 'w'
+# dispatch-action 'ssh://<username>@<foobar>:<port>' '!' 'w'
+# dispatch-action 'ssh://<foobar>:/tmp/'
+# dispatch-action 'ssh://<foobar>:/tmp/foobar'
+# dispatch-action 'ssh://<username>@<foobar>:/tmp/'
+# dispatch-action 'ssh://<username>@<foobar>:<port>:/tmp/foobar'
+
 package require Tclx
 
 ##############################################################################
@@ -3206,10 +3215,10 @@ proc substEnvVars {str} {
 }
 
 ## TODO: Documentation
-proc splitString {text str} {
-    set index [string first $str $text]
+proc splitString {text str {startIndex 0}} {
+    set index [string first $str $text $startIndex]
     if {$index != -1} {
-        set i1 [expr {$index - [string length $str]}]
+        set i1 [expr {$index - 1}]
         set i2 [expr {$index + [string length $str]}]
         return [list [string range $text 0 $i1] [string range $text $i2 end]]
     } else {
