--- a/README.adoc
+++ b/README.adoc
@@ -3407,21 +3407,31 @@ if {$text ne ""} {
             execl tmux [list send-keys -t $muxSessionName $cmd Enter]
         }
         "ssh://*!*" {
-            set rest [splitString [stripPrefix $text {ssh://}] "!"]
-            set hostExpr [string trim [substEnvVars [lindex $rest 0]]]
-            set cmd [constructEnrichedPathCmd [lindex $rest 1]]
+            # Execute an SSH command
+            set parts [splitString $text "!"]
+
+            set hostExpr [string trim [substEnvVars [lindex $parts 0]]]
+            set cmd [constructEnrichedPathCmd [lindex $parts 1]]
+
             execl ssh [list $hostExpr {*}$cmd]
         }
-        "ssh://*:*/" {
-            set rest [splitString [string trim [stripPrefix $text {ssh://}]] ":"]
-            set hostExpr [string trim [substEnvVars [lindex $rest 0]]]
-            set path [join [lrange $rest 1 end] ":"]
+        "ssh://*:/*/" {
+            # Expand a remote dir via SSH
+            set parts [splitString [string trim $text] ":/" [string length "ssh://"]]
+
+            set hostExpr [string trim [substEnvVars [lindex $parts 0]]]
+            set path "/[lindex $parts 1]"
+
             execl ssh [list $hostExpr ls -1 --indicator-style=slash --dereference --all --group-directories-first $path]
         }
-        "ssh://*:*" {
-            set rest [splitString [string trim [stripPrefix $text {ssh://}]] ":"]
-            set hostExpr [string trim [substEnvVars [lindex $rest 0]]]
-            set path [join [lrange $rest 1 end] ":"]
+        "ssh://*:/*" {
+            # Edit a remote file via SSH
+            # TODO: Make the edit functionality work
+            set parts [splitString [string trim $text] ":/" [string length "ssh://"]]
+
+            set hostExpr [string trim [substEnvVars [lindex $parts 0]]]
+            set path "/[lindex $parts 1]"
+
             execl ssh [list $hostExpr cat $path]
         }
         "/*/" {
