feat: Add command to exec a deep path

--- a/README.adoc
+++ b/README.adoc
@@ -5674,6 +5674,22 @@ exit 2
 
 ----
 
+=== `deep-exec` - execs a command from `PATH`, the command might be a path instead of just a file name
+
+TODO: Help text
+
+.file::deep-exec
+[source,sh]
+----
+#!/usr/bin/env sh
+
+exec_path_=$(get-exec "$1")
+shift 1
+
+exec "${exec_path_}" "$@"
+
+----
+
 === `enrich-path` - enriches `PATH`, then executes a command
 
 TODO: Help text
